[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/themes/LevelSelectTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/level_selection/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://sound/sfx/Menu1_SelectA.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/sfx/Menu1_NavA.wav" type="AudioStream" id=4]
[ext_resource path="res://art/background.png" type="Texture" id=5]

[node name="LevelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Level_1" type="Button" parent="."]
margin_left = 192.0
margin_top = 256.0
margin_right = 320.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 128 )
focus_mode = 0
enabled_focus_mode = 0
text = "1"

[node name="Level_2" type="Button" parent="."]
margin_left = 384.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 128 )
focus_mode = 0
enabled_focus_mode = 0
text = "2"

[node name="Level_3" type="Button" parent="."]
margin_left = 576.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 128 )
focus_mode = 0
enabled_focus_mode = 0
text = "3"

[node name="Level_4" type="Button" parent="."]
margin_left = 768.0
margin_top = 256.0
margin_right = 896.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 128 )
focus_mode = 0
enabled_focus_mode = 0
text = "4"

[node name="Level_5" type="Button" parent="."]
margin_left = 960.0
margin_top = 256.0
margin_right = 1088.0
margin_bottom = 384.0
rect_min_size = Vector2( 128, 128 )
focus_mode = 0
enabled_focus_mode = 0
text = "5"
icon_align = 1

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="button_down" from="Level_1" to="." method="_on_Level_1_button_down"]
[connection signal="button_up" from="Level_1" to="." method="_on_Level_1_button_up"]
[connection signal="mouse_entered" from="Level_1" to="." method="_on_Level_1_mouse_entered"]
[connection signal="button_down" from="Level_2" to="." method="_on_Level_2_button_down"]
[connection signal="button_up" from="Level_2" to="." method="_on_Level_2_button_up"]
[connection signal="mouse_entered" from="Level_2" to="." method="_on_Level_2_mouse_entered"]
[connection signal="button_down" from="Level_3" to="." method="_on_Level_3_button_down"]
[connection signal="button_up" from="Level_3" to="." method="_on_Level_3_button_up"]
[connection signal="mouse_entered" from="Level_3" to="." method="_on_Level_3_mouse_entered"]
[connection signal="button_down" from="Level_4" to="." method="_on_Level_4_button_down"]
[connection signal="button_up" from="Level_4" to="." method="_on_Level_4_button_up"]
[connection signal="mouse_entered" from="Level_4" to="." method="_on_Level_4_mouse_entered"]
[connection signal="button_down" from="Level_5" to="." method="_on_Level_5_button_down"]
[connection signal="button_up" from="Level_5" to="." method="_on_Level_5_button_up"]
[connection signal="mouse_entered" from="Level_5" to="." method="_on_Level_5_mouse_entered"]
